# DrDrOS

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: stats.yml
buildroot/: README.md  drdros_defconfig
drdr-demo/: Cargo.toml
drdr-demo/src/: main.rs
drdr-desk/: Cargo.toml
drdr-desk/src/: apps.rs  main.rs  net.rs
drdr-edit/: Cargo.toml
drdr-edit/src/: main.rs
drdr-fb/: Cargo.toml
drdr-fb/src/: lib.rs
drdr-files/: Cargo.toml
drdr-files/src/: interactive.rs  list.rs  main.rs  tty.rs
drdr-font/: Cargo.toml
drdr-font/src/: lib.rs
drdr-init/: Cargo.toml
drdr-init/src/: main.rs  net.rs
drdr-net/: Cargo.toml
drdr-net/src/: lib.rs
drdr-shell/: Cargo.toml
drdr-shell/src/: main.rs  pipeline.rs
drdr-store/: Cargo.toml
drdr-store/src/: lib.rs
drdr-tty/: Cargo.toml
drdr-tty/src/: lib.rs
drdr-ui/: Cargo.toml
drdr-ui/src/: fb.rs  input.rs  lib.rs  vt.rs  window.rs
iso/: README.md  build.sh
scripts/: build-buildroot.sh  install-hooks.sh  qemu.sh  stats.sh
