# drdr-desk — DrDrDesk, the DrDrOS graphical session / desktop shell.
#
# This is the program a user actually lands in after boot: a framebuffer
# desktop with a keyboard-driven launcher for the other DrDr apps.
# drdr-init (PID 1) supervises and respawns it.

[package]
name        = "drdr-desk"
description = "DrDrDesk — DrDrOS framebuffer desktop + app launcher."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
license.workspace      = true

[[bin]]
name = "drdr-desk"
path = "src/main.rs"

[dependencies]
drdr-fb   = { path = "../drdr-fb" }
drdr-font = { path = "../drdr-font" }
drdr-ui   = { path = "../drdr-ui" }
# The "DrDrNet" status window is a real client of DrDrNet's Tier 3 async
# reactor: DrDrDesk runs the reactor server in a background thread and
# the window polls it over loopback TCP. Proves the protocol with an
# actual app, not just unit tests.
drdr-net  = { path = "../drdr-net" }
# reboot(2) / poweroff for the System window's power entries.
nix = { version = "0.31.3", features = ["reboot"] }
