# drdr-init — DrDrOS custom init system (PID 1).
# Runs as the FIRST userland process after the Linux kernel finishes booting.
# Its job is to bring up the framebuffer, draw the splash, and launch DrDrShell.

[package]
name        = "drdr-init"
description = "Custom PID 1 that boots DrDrOS instead of a normal Linux login."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
license.workspace      = true

[[bin]]
name = "drdr-init"
path = "src/main.rs"

# "mount"   → mount the pseudo-filesystems.
# "process" → waitpid(-1): a PID-1 supervisor must reap *every* orphaned
#             child, not just the session it spawned (orphans get
#             reparented to us and would otherwise pile up as zombies).
[dependencies]
nix = { version = "0.31.3", features = ["mount", "process"] }
# Open /dev/fb0 and paint the boot splash in the real DrDrTheme colors.
drdr-fb   = { path = "../drdr-fb" }
drdr-font = { path = "../drdr-font" }
# Theme::DRDR — so the splash matches the desktop instead of hard-coding
# a one-off blue. drdr-ui is light (only drdr-fb + drdr-font transitively).
drdr-ui   = { path = "../drdr-ui" }
