# drdr-net — DrDrNet, the DrDrOS custom binary network protocol.
# Library crate exposing client + server primitives for other DrDr apps.

[package]
name        = "drdr-net"
description = "DrDrNet: custom binary network protocol (not HTTP) + TCP helpers."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
license.workspace      = true

[lib]
name = "drdr_net"
path = "src/lib.rs"

[dependencies]
# Tier 3's reactor needs epoll. nix's "event" feature gives us a SAFE
# wrapper around epoll_create1/epoll_ctl/epoll_wait, so drdr-net keeps
# its `#![forbid(unsafe_code)]` — the unsafe lives inside nix, audited
# upstream, not in our protocol code. No async runtime is pulled in.
nix = { version = "0.31.3", features = ["event"] }
