# drdr-ui — DrDrUI, the DrDrOS GUI framework.
# Library crate: other crates import it for windows, widgets, focus, drawing.

[package]
name        = "drdr-ui"
description = "DrDrUI: framebuffer-based GUI framework (windows, widgets, focus, theme)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
license.workspace      = true

[lib]
name = "drdr_ui"
path = "src/lib.rs"

[dependencies]
# Widget framework paints onto drdr-fb's framebuffer and renders text
# via drdr-font's bitmap glyphs.
drdr-fb   = { path = "../drdr-fb" }
drdr-font = { path = "../drdr-font" }
# Tier 2 input multiplexing: poll(2) over the keyboard + mouse fds so
# the window manager can watch both at once. "poll" is the only nix
# feature we need here — no async runtime, no extra transitive weight.
nix = { version = "0.31.3", features = ["poll"] }
